--- a/arch/arm64/configs/lineageos_rhode_defconfig
+++ b/arch/arm64/configs/lineageos_rhode_defconfig
@@ -78,8 +78,10 @@ CONFIG_COMPAT=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
+CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_ENERGY_MODEL=y
 CONFIG_CPU_IDLE=y
+CONFIG_CPU_IDLE_GOV_TEO=y
 CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_STAT=y
@@ -625,7 +627,6 @@ CONFIG_QCOM_GLINK_PKT=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_MSM_CDSP_LOADER=y
 CONFIG_QCOM_SMCINVOKE=y
-# CONFIG_MSM_EVENT_TIMER is not set
 CONFIG_MSM_PM=y
 CONFIG_QTI_L2_REUSE=y
 CONFIG_QTI_RPM_STATS_LOG=y
